--- a/symba-lsid-ws-api/pom.xml
+++ b/symba-lsid-ws-api/pom.xml
@@ -1,55 +1,47 @@
+
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <parent>
-        <groupId>net.sourceforge.symba</groupId>
-        <artifactId>symba</artifactId>
-        <version>8.09</version>
-    </parent>
+    <!--<parent>-->
+    <!--<groupId>net.sourceforge.symba</groupId>-->
+    <!--<artifactId>symba</artifactId>-->
+    <!--<version>8.09</version>-->
+    <!--</parent>-->
+    <groupId>net.sourceforge.symba</groupId>
     <artifactId>symba-lsid-ws-api</artifactId>
+    <version>8.09</version>
     <packaging>jar</packaging>
     <name>SyMBA LSID webservices: Interfaces</name>
     <properties>
-        <cxf.version>2.1</cxf.version>
+        <cxf.version>2.2.6</cxf.version>
     </properties>
     <dependencies>
         <!-- CXF : when the war is built, cxf automatically is used to generate all wsdl files from the java -->
-      <dependency>
-          <groupId>org.apache.cxf</groupId>
-          <artifactId>cxf-rt-frontend-jaxws</artifactId>
-          <version>2.1</version>
-      </dependency>
-      <dependency>
-          <groupId>org.apache.cxf</groupId>
-          <artifactId>cxf-rt-transports-http</artifactId>
-          <version>2.1</version>
-      </dependency>
         <dependency>
-            <groupId>aopalliance</groupId>
-            <artifactId>aopalliance</artifactId>
-            <version>1.0</version>
+            <groupId>org.apache.cxf</groupId>
+            <artifactId>cxf-rt-frontend-jaxws</artifactId>
+            <version>${cxf.version}</version>
         </dependency>
         <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-core</artifactId>
-            <version>2.0.4</version>
+            <groupId>org.apache.cxf</groupId>
+            <artifactId>cxf-rt-transports-http</artifactId>
+            <version>${cxf.version}</version>
+            <exclusions>
+                <!-- remove the old version of spring referenced by cxf -->
+                <exclusion>
+                    <groupId>org.springframework</groupId>
+                    <artifactId>spring-web</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-beans</artifactId>
-            <version>2.0.4</version>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-context</artifactId>
-            <version>2.0.4</version>
-        </dependency>
+        <!--Add back the right version of spring-->
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-web</artifactId>
-            <version>2.0.4</version>
+            <version>3.0.1.RELEASE</version>
         </dependency>
+
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
