--- a/symba-webapp/src/main/webapp/WEB-INF/web.xml
+++ b/symba-webapp/src/main/webapp/WEB-INF/web.xml
@@ -3,24 +3,55 @@
         "http://java.sun.com/dtd/web-app_2_3.dtd" >
 
 <web-app>
+
+    <!-- http://code.google.com/p/gwtupload -->
+    <context-param>
+        <!-- max size of the upload request -->
+        <param-name>maxSize</param-name>
+        <param-value>3145728</param-value>
+    </context-param>
+
+    <!-- http://code.google.com/p/gwtupload -->
+    <context-param>
+        <!-- Useful in development mode to slow down the uploads in fast networks.
+         Put the number of milliseconds to sleep in each block received in the server.
+         false or 0, means don't use slow uploads  -->
+        <param-name>slowUploads</param-name>
+        <param-value>200</param-value>
+    </context-param>
+
+    <!-- http://code.google.com/p/gwtupload -->
     <servlet>
-        <servlet-name>UploadServlet</servlet-name>
-        <servlet-class>net.sourceforge.symba.web.server.UploadServlet</servlet-class>
+        <servlet-name>uploadServlet</servlet-name>
+        <!-- This is the default servlet, it puts files in session -->
+        <servlet-class>gwtupload.server.UploadServlet</servlet-class>
+        <!-- Use something like the below to customise the servlet - extend ActionUpload and override executeAction-->
+        <!--<servlet-class>my.package.MyCustomizedUploadServlet</servlet-class>      -->
     </servlet>
+
+    <!--<servlet>-->
+    <!--<servlet-name>UploadServlet</servlet-name>-->
+    <!--<servlet-class>net.sourceforge.symba.web.server.UploadServlet</servlet-class>-->
+    <!--</servlet>-->
 
     <servlet>
         <servlet-name>investigationsServiceServlet</servlet-name>
         <servlet-class>net.sourceforge.symba.web.server.InvestigationsServiceImpl</servlet-class>
     </servlet>
 
-    <servlet-mapping>
-        <servlet-name>UploadServlet</servlet-name>
-        <url-pattern>/net.sourceforge.symba.web.InvestigationManipulator/upload</url-pattern>
-    </servlet-mapping>
+    <!--<servlet-mapping>-->
+    <!--<servlet-name>UploadServlet</servlet-name>-->
+    <!--<url-pattern>/net.sourceforge.symba.web.InvestigationManipulator/upload</url-pattern>-->
+    <!--</servlet-mapping>-->
 
     <servlet-mapping>
         <servlet-name>investigationsServiceServlet</servlet-name>
         <url-pattern>/net.sourceforge.symba.web.InvestigationManipulator/investigationsService</url-pattern>
     </servlet-mapping>
 
+    <!-- http://code.google.com/p/gwtupload -->
+    <servlet-mapping>
+        <servlet-name>uploadServlet</servlet-name>
+        <url-pattern>*.gupld</url-pattern>
+    </servlet-mapping>
 </web-app>
