--- a/symba-webapp/src/main/webapp/WEB-INF/web.xml
+++ b/symba-webapp/src/main/webapp/WEB-INF/web.xml
@@ -15,9 +15,9 @@
     <context-param>
         <!-- Useful in development mode to slow down the uploads in fast networks.
          Put the number of milliseconds to sleep in each block received in the server.
-         false or 0, means don't use slow uploads  -->
+         false or 0, means don't use slow uploads. Good debug value is 200  -->
         <param-name>slowUploads</param-name>
-        <param-value>200</param-value>
+        <param-value>false</param-value>
     </context-param>
 
     <!-- http://code.google.com/p/gwtupload -->
