updated materials to real-time update the numbers selected. Allows contact updates for the person you're logged in as now. Refactored a number of handlers to use the ActivateableClickHandler

--- a/symba-webapp/src/main/webapp/WEB-INF/web.xml
+++ b/symba-webapp/src/main/webapp/WEB-INF/web.xml
@@ -17,7 +17,7 @@
          Put the number of milliseconds to sleep in each block received in the server.
          false or 0, means don't use slow uploads. Good debug value is 200  -->
         <param-name>slowUploads</param-name>
-        <param-value>false</param-value>
+        <param-value>0</param-value>
     </context-param>
 
     <!-- http://code.google.com/p/gwtupload -->
