--- a/symba-webapp-helper/pom.xml
+++ b/symba-webapp-helper/pom.xml
@@ -17,7 +17,7 @@
     <parent>
         <groupId>net.sourceforge.symba</groupId>
         <artifactId>symba</artifactId>
-        <version>8.09</version>
+        <version>${application.version}</version>
     </parent>
     <artifactId>symba-webapp-helper</artifactId>
     <packaging>jar</packaging>
@@ -26,12 +26,12 @@
         <dependency>
             <groupId>${pom.groupId}</groupId>
             <artifactId>symba-mapping</artifactId>
-            <version>${pom.version}</version>
+            <version>${application.version}</version>
         </dependency>
         <dependency>
             <groupId>${pom.groupId}</groupId>
             <artifactId>symba-querying</artifactId>
-            <version>${pom.version}</version>
+            <version>${application.version}</version>
         </dependency>
         <!--<dependency>-->
             <!--<groupId>uk.org.carmen.security</groupId>-->
