--- a/symba-books/pom.xml
+++ b/symba-books/pom.xml
@@ -3,9 +3,9 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>net.sourceforge.symba</groupId>
-        <artifactId>symba</artifactId>
-        <version>8.09</version>
+        <groupId>${application.package}</groupId>
+        <artifactId>${application.id}</artifactId>
+        <version>${application.version}</version>
     </parent>
     <artifactId>symba-books</artifactId>
     <packaging>jar</packaging>
