--- a/symba-mapping/pom.xml
+++ b/symba-mapping/pom.xml
@@ -5,7 +5,7 @@
     <parent>                         
         <groupId>net.sourceforge.symba</groupId>
         <artifactId>symba</artifactId>
-        <version>8.09</version>
+        <version>${application.version}</version>
     </parent>
     <artifactId>symba-mapping</artifactId>
     <packaging>jar</packaging>
@@ -14,17 +14,17 @@
         <dependency>
             <groupId>${pom.groupId}</groupId>
             <artifactId>symba-lsid-ws-api</artifactId>
-            <version>${pom.version}</version>
+            <version>${application.version}</version>
         </dependency>
         <dependency>
             <groupId>${pom.groupId}</groupId>
             <artifactId>symba-core</artifactId>
-            <version>${pom.version}</version>
+            <version>${application.version}</version>
         </dependency>
         <dependency>
             <groupId>${pom.groupId}</groupId>
             <artifactId>symba-jaxb2</artifactId>
-            <version>${pom.version}</version>
+            <version>${application.version}</version>
         </dependency>
         <dependency>
             <groupId>jdom</groupId>
