--- a/symba-mda/pom.xml
+++ b/symba-mda/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>net.sourceforge.symba</groupId>
         <artifactId>symba</artifactId>
-        <version>8.09</version>
+        <version>${application.version}</version>
     </parent>
     <artifactId>symba-mda</artifactId>
     <packaging>pom</packaging>
