--- a/symba-webapp/pom.xml
+++ b/symba-webapp/pom.xml
@@ -13,14 +13,12 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <!--<parent>-->
-    <!--<groupId>net.sourceforge.symba</groupId>-->
-    <!--<artifactId>symba</artifactId>-->
-    <!--<version>8.09</version>-->
-    <!--</parent>-->
-    <groupId>net.sourceforge.symba</groupId>
+    <parent>
+        <groupId>${application.package}</groupId>
+        <artifactId>${application.id}</artifactId>
+        <version>${application.version}</version>
+    </parent>
     <artifactId>symba-webapp</artifactId>
-    <version>8.09</version>
     <packaging>war</packaging>
     <name>SyMBA Web Interface</name>
 
@@ -31,9 +29,9 @@
 
     <dependencies>
         <dependency>
-            <groupId>net.sourceforge.symba</groupId>
+            <groupId>${application.package}</groupId>
             <artifactId>symba-db</artifactId>
-            <version>8.09</version>
+            <version>${application.version}</version>
         </dependency>
         <!-- GWT upload used under the Apache License 2.0 http://www.apache.org/licenses/LICENSE-2.0 -->
         <dependency>
@@ -135,6 +133,14 @@
             <artifactId>gwt-user</artifactId>
             <version>${gwt.version}</version>
             <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+            <version>5.8</version>
+            <classifier>jdk15</classifier>
+            <scope>test</scope>
         </dependency>
 
     </dependencies>
