renamed references to Contacts to Users, as that is what is actually being stored. Next step is to change the fetching of all users to just the checking that a particular user is allowed, and valid.

--- a/pom.xml
+++ b/pom.xml
@@ -206,6 +206,7 @@
         <module>symba-lsid-ws-resolver</module>
         <module>symba-lsid-ws-client</module>
         <module>symba-books</module>
+        <module>symba-db</module>
     </modules>
     <profiles>
         <profile>
