--- a/symba-jaxb2/pom.xml
+++ b/symba-jaxb2/pom.xml
@@ -36,33 +36,33 @@
         <dependency>
             <groupId>com.sun.xml.bind</groupId>
             <artifactId>jaxb-impl</artifactId>
-            <version>2.1.10</version>
+            <version>2.1.13</version>
         </dependency>
         <dependency>
             <groupId>org.jvnet.hyperjaxb3</groupId>
             <artifactId>hyperjaxb3-ejb-runtime</artifactId>
-            <version>0.5.4</version>
+            <version>0.5.5</version>
         </dependency>
 
         <!-- Test dependencies -->
         <dependency>
-              <groupId>junit</groupId>
-              <artifactId>junit</artifactId>
-              <version>3.8.2</version>
-          </dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>3.8.2</version>
+        </dependency>
 
         <!-- Roundtrip -->
         <dependency>
             <groupId>org.jvnet.hyperjaxb3</groupId>
             <artifactId>hyperjaxb3-ejb-roundtrip</artifactId>
-            <version>0.5.4</version>
+            <version>0.5.5</version>
         </dependency>
 
         <!-- Hibernate Dependencies -->
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-entitymanager</artifactId>
-            <version>3.4.0.GA</version>
+            <version>${hibernate.version}</version>
             <scope>test</scope>
         </dependency>
 
@@ -103,7 +103,7 @@
             <plugin>
                 <groupId>org.jvnet.hyperjaxb3</groupId>
                 <artifactId>maven-hyperjaxb3-plugin</artifactId>
-                <version>0.5.4</version>
+                <version>0.5.5</version>
                 <executions>
                     <execution>
                         <goals>
