--- a/symba-lsid-ws-assigner/pom.xml
+++ b/symba-lsid-ws-assigner/pom.xml
@@ -7,6 +7,7 @@
         <artifactId>${application.id}</artifactId>
         <version>${application.version}</version>
     </parent>
+    <groupId>${application.package}</groupId>
     <artifactId>symba-lsid-ws-assigner</artifactId>
     <packaging>war</packaging>
     <name>SyMBA LSID webservices: LSID Assigning Service</name>
