--- a/symba-lsid-ws-client/pom.xml
+++ b/symba-lsid-ws-client/pom.xml
@@ -7,6 +7,7 @@
         <artifactId>${application.id}</artifactId>
         <version>${application.version}</version>
     </parent>
+    <groupId>${application.package}</groupId>
     <artifactId>symba-lsid-ws-client</artifactId>
     <packaging>jar</packaging>
     <name>SyMBA LSID webservices: Client Example Code</name>
