--- a/symba-lsid-ws-resolver/pom.xml
+++ b/symba-lsid-ws-resolver/pom.xml
@@ -7,6 +7,7 @@
         <artifactId>${application.id}</artifactId>
         <version>${application.version}</version>
     </parent>
+    <groupId>${application.package}</groupId>
     <artifactId>symba-lsid-ws-resolver</artifactId>
     <packaging>war</packaging>
     <name>SyMBA LSID webservices: Resolution and Retrieval Services</name>
