--- a/symba-webapp/pom.xml
+++ b/symba-webapp/pom.xml
@@ -18,12 +18,13 @@
         <artifactId>${application.id}</artifactId>
         <version>${application.version}</version>
     </parent>
+    <groupId>${application.package}</groupId>
     <artifactId>symba-webapp</artifactId>
     <packaging>war</packaging>
     <name>SyMBA Web Interface</name>
 
     <properties>
-        <gwt.version>2.0.3</gwt.version>
+        <gwt.version>2.3.0</gwt.version>
         <gwt.module.name>net.sourceforge.symba.web.InvestigationManipulator</gwt.module.name>
     </properties>
 
@@ -35,9 +36,9 @@
         </dependency>
         <!-- GWT upload used under the Apache License 2.0 http://www.apache.org/licenses/LICENSE-2.0 -->
         <dependency>
-            <groupId>gwtupload</groupId>
+            <groupId>com.googlecode.gwtupload</groupId>
             <artifactId>gwtupload</artifactId>
-            <version>0.5.7</version>
+            <version>0.6.3-compat</version>
         </dependency>
         <dependency>
             <groupId>commons-fileupload</groupId>
@@ -117,7 +118,7 @@
         <dependency>
             <groupId>postgresql</groupId>
             <artifactId>postgresql</artifactId>
-            <version>8.4-701.jdbc4</version>
+            <version>${postgresql.driver.version}</version>
             <!--<version>8.1-407.jdbc3</version>-->
         </dependency>
 
@@ -143,7 +144,7 @@
             <scope>test</scope>
         </dependency>
 
-    <!-- JDOM is currently for the web.server.database.security package-->
+        <!-- JDOM is currently for the web.server.database.security package-->
         <dependency>
             <groupId>org.jdom</groupId>
             <artifactId>jdom</artifactId>
@@ -157,7 +158,7 @@
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>gwt-maven-plugin</artifactId>
-                <version>1.2</version>
+                <version>2.3.0</version>
                 <configuration>
                     <module>${gwt.module.name}</module>
                 </configuration>
@@ -181,10 +182,4 @@
             </plugin>
         </plugins>
     </build>
-    <repositories>
-        <repository>
-            <id>gwtupload</id>
-            <url>http://gwtupload.googlecode.com/svn/mavenrepo/</url>
-        </repository>
-    </repositories>
 </project>
