more updates to documentation, and reconciliation of junit versions

--- a/pom.xml
+++ b/pom.xml
@@ -152,7 +152,7 @@
      2. run "mvn doxia:render-books"
      3. go back up to the top-level directory
      4. run "mvn site:site"
-     5. run "mvn site:deploy" first on your local test then, once you're happy, to the FuGE website.
+     5. run "mvn site:deploy" first on your local test then, once you're happy, to the SyMBA website.
      6. manually copy symba-books/target/generated-site/pdf/installation/installation.pdf to shell.sf.net in the directory
      /home/groups/s/sy/symba/htdocs/
      7. Do the same for the general-information.pdf and deviations-from-fuge as you did in #6 for installation.pdf
