--- a/symba-lsid-ws-assigner/pom.xml
+++ b/symba-lsid-ws-assigner/pom.xml
@@ -23,6 +23,16 @@
             <artifactId>cxf-rt-frontend-jaxws</artifactId>
             <version>${cxf.version}</version>
         </dependency>
+
+        <!-- Somewhere along the line, the servlet-api jar is added to the war, which is wrong.
+             Ensure it only has provided scope.-->
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>servlet-api</artifactId>
+            <version>2.3</version>
+            <scope>provided</scope>
+        </dependency>
+
         <dependency>
             <groupId>org.apache.cxf</groupId>
             <artifactId>cxf-rt-transports-http</artifactId>
